# model_maker

./: README.md  create_model.ipynb  pyproject.toml
src/model_maker/: __init__.py
